src/ui/page/share/dataset/steps/serviceStorageSelection/serviceStorageSelection.scss
@import '@/ui/style/fonts.scss';
@import '@/ui/style/theme.scss';
@import '@/ui/style/mixins.scss';

.okp4-dataverse-portal-share-dataset-page-service-selection-container {
  @include with-theme() {
    @include grid-container($colGutter: 10px, $rowGutter: 22px);
    grid-template-rows: auto auto auto 1fr;
    height: 100%;
    padding-top: 34px;

    h2 {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: auto, $rowEnd: auto);
      @include noto-sans(700);
      font-size: 28px;
      line-height: 28px;
      letter-spacing: 0.4px;
      color: themed('text');
    }

    .okp4-dataverse-portal-share-dataset-page-service-selection-tabs {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: auto, $rowEnd: auto);

      h3 {
        @include noto-sans(700);
        font-size: 16px;
        line-height: 24px;
        letter-spacing: 0.4px;
        color: themed('text');
        margin-bottom: 16px;
      }
    }

    .okp4-dataverse-portal-searchbar-main {
      @include grid-item($colStart: 1, $colEnd: 7, $rowStart: auto, $rowEnd: auto);
    }

    .okp4-dataverse-portal-share-dataset-page-services-container {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: auto, $rowEnd: auto);
      max-height: 420px;

      @include use-breakpoints(('large-desktop')) {
        max-height: 100%;
      }
      overflow-y: auto;

      &.detailed {
        @include bi-column-item(left);
      }

      .okp4-dataverse-portal-share-dataset-page-services {
        display: grid;
        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
        grid-auto-rows: 220px;
        gap: 48px;
        margin-right: 15px;

        .okp4-dataverse-portal-share-dataset-page-service {
          :focus-visible {
            outline: none;
          }

          &.selected {
            outline-offset: -2px;
            outline: 2px solid themed('primary-color');
            background-color: themed('card-background-selected');
          }

          .selected-button {
            background-color: themed('card-button-selected');
            box-shadow: none;
          }
        }
      }

      .okp4-dataverse-portal-service-search-no-result-wrapper {
        justify-content: center;
        height: 100%;
      }
    }

    .okp4-dataverse-portal-share-dataset-page-service-details-container {
      @include bi-column-item(right);
      border-radius: 12px;
      padding: 22px 22px 0;
      background: themed('card-background-gradient');
      margin-left: 18px;

      .okp4-dataverse-portal-share-dataset-page-service-details-scroll-container {
        max-height: 420px;
        height: 100%;
        padding-right: 20px;
        overflow-y: auto;

        @include use-breakpoints(('large-desktop')) {
          max-height: 100%;
        }
      }
    }
  }
}

